--- a/R/003-figures.Rmd
+++ b/R/003-figures.Rmd
@@ -895,6 +895,39 @@ save_plot(p, filename = file.path(dir.results, "figures/Fig_S2b"),  width = 16, 
 
 ## Extended data figures 3
 
+```{r fig.width=8, fig.height=6}
+
+
+exclude_terms <- c("FOREBRAIN", "BRANCHING", "KIDNEY", "RENAL","EXTERNAL","DNA GEOMETRIC","SPECIFICATION OF ANIMAL","GLAND DEVELOPMENT","HAIR","LAMB","NUCLEAR","DE NOVO","CHAPERONE","NEPHRON","APPENDAGE","SPINAL","HEAT", "EYE","MULTI-ORGANISM", "VISUAL","FILOPODIUM","RETINAL","COLD-INDUCED", "PROTEIN LOCALIZATION","SPERM AXONEME","LIMB","DEMANNOSYLATION","CYTOSKELETON","NON-MOTILE","CARDIAC","PURINE","RIBONUCLEOSIDE","RIBONUCLEOTIDE","METAL ION","MAINTENANCE OF LOCATION","PYRUVATE","NUCLEOTIDE","NUCLEOSIDE","PYRIDINE","RIBONUCLEOSIDE","NEPHRON","ENDOSOME","MOTOR NEURON","FRUCTOSE","WOUND HEALING","TISSUE HOMEOSTASIS","FAT CELL","INTERNAL ENCAPSULATING","SKIN","BODY FLUID","CARBOHYDRATE","PREGNANCY","MECHANCAL","KETONE","PEPTIDE HORMONE","LUNG","RESPIRATORY TUBE","ENDODERM","CIRCADIAN","PLASMA MEMBRANE","WOUNDING")
+
+res <- readRDS(file.path(dir.results, "BP/OE_PCW_progression_markers_GO_terms/PCW7_GO_BP.rds"))
+p <- Plot_GO_Enrichment(df = res@result, category = 30,wrap_length = 50, base_size = 8,
+                   exclude_terms = exclude_terms, cluster_name = "PCW7")
+p
+save_plot(p, filename = file.path(dir.results, "figures/FIg_S3a"),  width = 8, height = 7, formats = c("pdf"))
+
+res <- readRDS(file.path(dir.results, "BP/OE_PCW_progression_markers_GO_terms/PCW8_GO_BP.rds"))
+p <- Plot_GO_Enrichment(df = res@result, category = 30,wrap_length = 50, base_size = 8,
+                   exclude_terms = exclude_terms, cluster_name = "PCW8")
+p
+save_plot(p, filename = file.path(dir.results, "figures/FIg_S3b"),  width = 8, height = 7.5, formats = c("pdf"))
+
+res <- readRDS(file.path(dir.results, "BP/OE_PCW_progression_markers_GO_terms/PCW10_GO_BP.rds"))
+p <- Plot_GO_Enrichment(df = res@result, category = 30,wrap_length = 60, base_size = 8,
+                   exclude_terms = exclude_terms, cluster_name = "PCW10")
+p
+save_plot(p, filename = file.path(dir.results, "figures/FIg_S3c"),  width = 8, height = 7, formats = c("pdf"))
+
+res <- readRDS(file.path(dir.results, "BP/OE_PCW_progression_markers_GO_terms/PCW12_GO_BP.rds"))
+p <- Plot_GO_Enrichment(df = res@result, category = 30,wrap_length = 50, base_size = 8,
+                   exclude_terms = exclude_terms, cluster_name = "PCW12")
+p
+save_plot(p, filename = file.path(dir.results, "figures/FIg_S3d"),  width = 8, height = 7, formats = c("pdf"))
+
+```
+
+
+
 
 ## Extended data figures 4
 ### Fig S4a
@@ -1020,6 +1053,340 @@ p <- plot_cluster_percent(data = sub, label_size = 3, cluster_col = "ann_level_2
 group_colors = custom_colors$PCW,legend = FALSE, multi_p = F,ncol = 7,x_angle = 45)
 p
 save_plot(p, file.path(dir.results, "figures/Fig_S5b"), formats = c("pdf"),width = 12, height = 7)
+
+```
+
+## Extended data figures 6
+
+### Create cellchat object
+
+```{r}
+
+obj <- readRDS(file.path(dir.main, "results/003_celltype/rdata/FN.rds"))
+celltypes <- c("Olf. HBCs","Microvillars","Sustentaculars", "GBCs","INPs","iOSNs","mOSNs","Olf. ensh. glia")
+colors <- c("Olf. HBCs"="#E41A1C","GBCs"="#F48B5A","INPs"= "#E69F00","iOSNs"="#f05b43","mOSNs"="#33b8ff", "Microvillars"="#efe13c",
+"Sustentaculars"="#C09ACA","Olf. ensh. glia" = "palevioletred3")
+
+Idents(obj) <- "ann_level_2"
+sub <- Seurat_Subset(obj, cluster_id = celltypes, ndims = 5, min.dist = 1)
+
+# Create cellchat object
+cellchat <- createCellChat(object = sub, group.by = "ann_level_2_order", assay = "RNA")
+rm(sub)
+invisible(gc())
+levels(cellchat@idents)
+groupSize <- as.numeric(table(cellchat@idents))
+CellChatDB <- CellChatDB.human 
+showDatabaseCategory(CellChatDB)
+
+# Set the ligand-receptor interaction database
+# use a subset of CellChatDB for cell-cell communication analysis
+CellChatDB.use <- subsetDB(CellChatDB, search = "Secreted Signaling", key = "annotation") # use Secreted Signaling
+# set the used database in the object
+cellchat@DB <- CellChatDB.use
+
+# Preprocessing the expression data for cell-cell communication analysis
+# subset the expression data of signaling genes for saving computation cost
+cellchat <- subsetData(cellchat) # This step is necessary even if using the whole database
+future::plan("multisession", workers = 4) # do parallel
+cellchat <- identifyOverExpressedGenes(cellchat)
+cellchat <- identifyOverExpressedInteractions(cellchat)
+
+# Compute the communication probability and infer cellular communication network
+cellchat <- computeCommunProb(cellchat, type = "triMean")
+
+# Filter out the cell-cell communication if there are only few cells in certain cell groups. By default, the minimum number of cells required in each cell group for cell-cell communication is 10.
+cellchat <- filterCommunication(cellchat, min.cells = 10)
+
+# Infer the cell-cell communication at a signaling pathway level
+cellchat <- computeCommunProbPathway(cellchat)
+
+# Calculate the aggregated cell-cell communication network
+cellchat <- aggregateNet(cellchat)
+
+cellchat <- netAnalysis_computeCentrality(cellchat,slot.name = "netP") 
+selectK(cellchat, pattern = "outgoing")
+invisible(gc())
+nPatterns = 4
+cellchat <- identifyCommunicationPatterns(cellchat, pattern = "outgoing", k = nPatterns, width = 4, height = 9)
+invisible(gc())
+selectK(cellchat, pattern = "incoming")
+invisible(gc())
+nPatterns = 4
+cellchat <- identifyCommunicationPatterns(cellchat, pattern = "incoming", k = nPatterns, width = 4, height = 9)
+invisible(gc())
+
+saveRDS(cellchat, file.path(dir.results, "rdata/FN_cellchat.rds"))
+invisible(gc())
+
+
+```
+
+### Fig S7a
+
+
+```{r fig.width=8, fig.height=7}
+
+ht1 <- netAnalysis_signalingRole_heatmap(cellchat, pattern = "outgoing", font.size = 12, width = 6, height = 8, color.heatmap = "BuGn",  cluster.rows = F, cluster.cols = TRUE, color.use = colors)
+
+ht2 <- netAnalysis_signalingRole_heatmap(cellchat, pattern = "incoming", font.size = 12, width = 6, height = 8, color.heatmap = "BuGn",  cluster.rows = F, cluster.cols = TRUE, color.use = colors)
+
+ComplexHeatmap::draw(ht1 + ht2, ht_gap = unit(0.5, "cm"))
+
+pdf(file.path(dir.results, "figures/Fig_S7a.pdf"), width = 7.5, height = 6, useDingbats = F)
+draw(ht1 + ht2, ht_gap = unit(0.5, "cm"))
+dev.off()
+
+
+```
+
+### Fig S7b
+
+```{r fig.width=10, fig.height=10}
+
+dir <- file.path(dir.results, "figures/SLIT_network/")
+if (!dir.exists(dir)) {
+  dir.create(file.path(dir), recursive = TRUE, showWarnings = FALSE)
+}
+
+LR.pairs <- read.delim(file.path(dir.results, "figures/LR.pairs/LR.pairs.tsv"))
+pathway.name <- unique(LR.pairs$pathway_name)
+ann_level_2.to.test <- as.vector(unique(cellchat@idents))
+ann_level_2.to.test <- ann_level_2.to.test[ann_level_2.to.test %in% c("preOSNs","iOSNs","mOSNs","Olf. ensh. glia")]
+
+pathways.show = "SLIT"
+weight.max <- max(cellchat@netP$weights[[pathways.show]], na.rm = TRUE)
+
+pdf(file = file.path(dir, paste0(pathways.show, "_Fig_S7b.pdf")), width = 8, height = 8, useDingbats = FALSE)
+  
+netVisual_aggregate(
+  cellchat,
+  signaling = "SLIT",
+  remove.isolate = FALSE,
+  pt.title = 14,
+  layout = "chord",
+  sources.use = ann_level_2.to.test,  
+  targets.use = ann_level_2.to.test,  
+  color.use = colors, 
+  cell.order = celltypes,  
+  edge.weight.max = weight.max[1],
+  edge.width.max = 12,
+  vertex.label.cex = 1,
+  signaling.name = "SLIT"
+)
+dev.off()
+
+```
+
+### Fig S7e
+
+```{r fig.width=8, fig.height=4}
+
+invisible(gc())
+dir <- paste(dir.results, "figures/pathway_signaling_roles/", sep = "/")
+if(!dir.exists(dir)){dir.create(file.path(dir), recursive = TRUE, showWarnings = FALSE)}
+
+#pathways.show <- cellchat@netP$pathways
+pathways.show <- c("PTN","ncWNT","SEMA3","FGF","IGF","SLIT")
+
+for(i in 1:length(pathways.show)){
+  print(pathways.show[i])
+  pdf(paste(dir,  pathways.show[i], ".pdf", sep = ""), width = 6, height = 2.5, useDingbats = FALSE)
+  netAnalysis_signalingRole_network(cellchat_subset, signaling = pathways.show[i],  width = 6,
+                                    height = 2.5, font.size = 10, color.use = colors) 
+  dev.off()
+}
+
+
+```
+
+## Extanded data figures 8
+
+```{r  fig.width=20, fig.height=12, warning=F, message=F}
+
+# Set output directory
+dir <- file.path(dir.results, "figures/LR.pairs.all.pathways/")
+if (!dir.exists(dir)) {
+  dir.create(file.path(dir), recursive = TRUE, showWarnings = FALSE)
+}
+
+# Generate a single bubble plot for all pathways
+netVisual_all <- netVisual_bubble(cellchat,
+                                  remove.isolate = TRUE,
+                                  sources.use = ann_level_2.to.test,
+                                  targets.use = ann_level_2.to.test,
+                                  angle.x = 45,
+                                  color.heatmap = "Spectral",
+                                  title.name = "",
+                                  return.data = FALSE
+) +
+  theme(text = element_text(size = 12),
+        legend.text = element_text(size = 10),
+        legend.key.height = unit(0.9, 'cm'),
+        legend.key.width = unit(0.5, 'cm')) +
+  guides(colour = guide_colorbar(frame.colour = "black", ticks.colour = "black")) +
+  geom_point(shape = 21, colour="black", stroke=0.5)
+
+# Save the figure as a PDF
+pdf(file = paste0(dir, "All_Pathways_LR_pairs.pdf"), width = 18, height = 12, useDingbats = FALSE)
+print(netVisual_all)
+dev.off()
+
+print("Unique plot for all pathways across all cell types saved successfully.")
+
+
+```
+
+## Extanded data figures 9
+
+### Signaling network
+
+```{r}
+
+celltypes <- c("Olf. HBCs","Microvillars","Sustentaculars", "GBCs","INPs","iOSNs","mOSNs","Olf. ensh. glia")
+
+colors <- c("Olf. HBCs"="#E41A1C","GBCs"="#F48B5A","INPs"= "#E69F00","iOSNs"="#f05b43","mOSNs"="#33b8ff", "Microvillars"="#efe13c","Sustentaculars"="#C09ACA","Olf. ensh. glia" = "palevioletred3")
+
+
+# Define the directory for saving signaling network plots
+dir <- file.path(dir.results, "figures/signaling_network/")
+if (!dir.exists(dir)) {
+  dir.create(file.path(dir), recursive = TRUE, showWarnings = FALSE)
+}
+
+# Load ligand-receptor pairs
+LR.pairs <- read.delim(file.path(dir.results, "figures/LR.pairs/LR.pairs.tsv"))
+
+# Extract unique pathway names
+#pathway.name <- unique(LR.pairs$pathway_name)
+pathway.name <- c("PTN","ncWNT","SEMA3","FGF","IGF","SLIT")
+
+ann_level_2.to.test <- as.vector(unique(cellchat@idents))
+ann_level_2.to.test <- ann_level_2.to.test[!ann_level_2.to.test %in% c("Schwann precursors","Schwann cells","Neural crest", "Melanocytes")]
+
+# Loop through pathways
+for (pathway in pathway.name) {
+  
+  # Show the current pathway being processed
+  pathways.show <- pathway
+  
+  # Get the maximum weight for the current pathway
+  weight.max <- max(cellchat@netP$weights[[pathways.show]], na.rm = TRUE)
+  
+  # Generate and save the plot for the single CellChat object
+  pdf(
+    file = file.path(dir, paste0(pathways.show, "_Fig_S8.pdf")),
+    width = 8, 
+    height = 8, 
+    useDingbats = FALSE
+  )
+  
+  # Visualize the signaling network
+  netVisual_aggregate(
+    cellchat,
+    signaling = pathways.show,
+    remove.isolate = FALSE,
+    pt.title = 14,
+    layout = "chord",
+    sources.use = ann_level_2.to.test,
+    targets.use = ann_level_2.to.test, 
+    color.use = colors,  
+    cell.order = celltypes, 
+    edge.weight.max = weight.max[1],
+    edge.width.max = 12,
+    vertex.label.cex = 1,
+    signaling.name = pathways.show
+  )
+  
+  dev.off()
+}
+
+
+```
+
+
+### Contribution of each L-R pairs
+
+```{r fig.width=4.5, fig.height=3}
+
+# Define the directory for saving figures
+dir <- file.path(dir.results, "figures/LR.pair_contributions/")
+if (!dir.exists(dir)) {
+  dir.create(file.path(dir), recursive = TRUE, showWarnings = FALSE)
+}
+
+# Load the list of ligand-receptor pairs
+LR.pairs <- read.delim(file.path(dir.results, "figures/LR.pairs/LR.pairs.tsv"))
+
+# Extract the unique pathway names
+pathway.name <- c("PTN","ncWNT","SEMA3","FGF","IGF","SLIT")
+
+# Loop through each pathway and generate plots
+for (pathway in pathway.name) {
+  # Show the current pathway being processed
+  pathways.show <- pathway
+  
+  # Generate the net analysis contribution plot for the single CellChat object
+  p <- netAnalysis_contribution(
+    cellchat, 
+    signaling = pathways.show, 
+    title = ""
+  ) + 
+    theme(
+      plot.title = element_text(size = 10),
+      axis.title = element_text(size = 10),
+      axis.text.y = element_text(size = 10)
+    )
+  
+  # Save the plot
+  save_plot(
+    file.path(dir, paste0(pathways.show, "_CellChat")),
+    plot = p,           
+    width = 3.5,
+    height = 5,
+    formats = c("pdf", "png")
+  )
+}
+
+```
+
+### Plot pathway gene expressions
+
+# plotGeneExpression
+
+```{r fig.width=3, fig.height=5, warning=F, message=F}
+
+dir <- file.path(dir.results, "figures/plotGeneExpression/")
+if(!dir.exists(dir)){dir.create(file.path(dir), recursive = T, showWarnings = F)}
+
+LR.pairs <- read.delim(file.path(dir.results, "figures/LR.pairs/LR.pairs.tsv"))
+pathway.name <- c("PTN","ncWNT","SEMA3","FGF","IGF","SLIT")
+
+DefaultAssay(sub) <- "RNA"
+
+for (pathway in 1:length(pathway.name)) {
+  pathways.show <- pathway.name[pathway]
+  LR.pairs.sub <- subset(LR.pairs, pathway_name == paste(pathways.show))
+  ligand <- unique(LR.pairs.sub$ligand)
+  ligand <- unique(unlist(strsplit(x = ligand, "\\_")))
+  receptor <- unique(LR.pairs.sub$receptor)
+  receptor <- unique(unlist(strsplit(x = receptor, "\\_")))
+  genes <- unique(c(ligand, receptor))
+  genes <- toupper(genes)
+  genes <- rownames(sub[genes,])
+
+  p <- Stacked_VlnPlot(object = sub, 
+               x_angle = 45,x_vjust = 1, x_hjust = 1,
+               features = genes,
+               group.by = "ann_level_2_order", 
+               font_size = 10,
+               colors.use = colors,
+               color.text.x = NULL)
+  
+   save_plot(p, paste0(dir, pathways.show,"_gene_expression"),  width = 3, height = 4)
+
+}
+
 
 ```
 
